[gd_scene load_steps=14 format=2]

[ext_resource path="res://sounds/Главное меню ~ Пять ночей с Максом REMAKE (2021).ogg" type="AudioStream" id=1]
[ext_resource path="res://frames/customnight.gd" type="Script" id=2]
[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://textures/foes/Titanawanna3.png" type="Texture" id=4]
[ext_resource path="res://textures/foes/Milka2.png" type="Texture" id=5]
[ext_resource path="res://textures/foes/sbu1.png" type="Texture" id=6]
[ext_resource path="res://textures/foes/Max2.png" type="Texture" id=7]
[ext_resource path="res://textures/foes/Masya1.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 78
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 144
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 162
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -16.0
autoplay = true

[node name="BG" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="BG"]
margin_left = 14.0
margin_top = 18.0
margin_right = 374.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "Своя Ночь"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="BG"]
margin_left = 614.0
margin_top = 498.0
margin_right = 979.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "Начать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="BG"]
margin_left = 42.6365
margin_top = 498.0
margin_right = 407.636
margin_bottom = 583.0
custom_fonts/font = SubResource( 2 )
text = "Назад"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max2" type="Node2D" parent="BG"]
scale = Vector2( 0.8, 0.8 )

[node name="Max" type="Sprite" parent="BG/Max2"]
position = Vector2( 165.563, 231.563 )
scale = Vector2( 0.345773, 0.345773 )
texture = ExtResource( 7 )

[node name="NameLabel" type="Label" parent="BG/Max2/Max"]
margin_left = -181.222
margin_top = -428.472
margin_right = 134.778
margin_bottom = -283.472
custom_fonts/font = SubResource( 3 )
text = "Макс"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="BG/Max2/Max"]
margin_left = -196.202
margin_top = 380.836
margin_right = 119.798
margin_bottom = 525.836
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harder" type="Button" parent="BG/Max2/Max"]
margin_left = 51.5306
margin_top = 337.526
margin_right = 223.531
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easier" type="Button" parent="BG/Max2/Max"]
margin_left = -292.0
margin_top = 337.526
margin_right = -120.0
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Milka2" type="Node2D" parent="BG"]
scale = Vector2( 0.8, 0.8 )

[node name="Milka" type="Sprite" parent="BG/Milka2"]
position = Vector2( 415.607, 253.787 )
scale = Vector2( 0.247506, 0.247506 )
texture = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="BG/Milka2/Milka"]
position = Vector2( -113.307, -89.7902 )
scale = Vector2( 1.39703, 1.39703 )

[node name="NameLabel" type="Label" parent="BG/Milka2/Milka/Node2D"]
margin_left = -227.13
margin_top = -428.472
margin_right = 167.87
margin_bottom = -283.472
rect_pivot_offset = Vector2( 3578.65, 2473.82 )
custom_fonts/font = SubResource( 3 )
text = "Милка"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="BG/Milka2/Milka/Node2D"]
margin_left = -190.109
margin_top = 380.836
margin_right = 125.891
margin_bottom = 525.836
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harder" type="Button" parent="BG/Milka2/Milka/Node2D"]
margin_left = 51.5306
margin_top = 337.526
margin_right = 223.531
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easier" type="Button" parent="BG/Milka2/Milka/Node2D"]
margin_left = -292.0
margin_top = 337.526
margin_right = -120.0
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wannadwatitana2" type="Node2D" parent="BG"]
scale = Vector2( 0.8, 0.8 )

[node name="Wannadwatitana" type="Sprite" parent="BG/Wannadwatitana2"]
position = Vector2( 600.685, 240.294 )
scale = Vector2( 1.36262, 1.36262 )
texture = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="BG/Wannadwatitana2/Wannadwatitana"]
position = Vector2( 3.5798, -6.40721 )
scale = Vector2( 0.253756, 0.253756 )

[node name="NameLabel" type="Label" parent="BG/Wannadwatitana2/Wannadwatitana/Node2D"]
margin_left = -419.947
margin_top = -428.472
margin_right = 449.053
margin_bottom = -283.472
custom_fonts/font = SubResource( 5 )
text = "Т. Ивановна"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="BG/Wannadwatitana2/Wannadwatitana/Node2D"]
margin_left = -189.716
margin_top = 380.836
margin_right = 126.284
margin_bottom = 525.836
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harder" type="Button" parent="BG/Wannadwatitana2/Wannadwatitana/Node2D"]
margin_left = 51.5306
margin_top = 337.526
margin_right = 223.531
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easier" type="Button" parent="BG/Wannadwatitana2/Wannadwatitana/Node2D"]
margin_left = -292.0
margin_top = 337.526
margin_right = -120.0
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SBU2" type="Node2D" parent="BG"]
scale = Vector2( 0.8, 0.8 )

[node name="SBU" type="Sprite" parent="BG/SBU2"]
position = Vector2( 818.412, 241.162 )
scale = Vector2( 0.386097, 0.386097 )
texture = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="BG/SBU2/SBU"]
position = Vector2( -4.78955, -24.8605 )
scale = Vector2( 0.89556, 0.89556 )

[node name="NameLabel" type="Label" parent="BG/SBU2/SBU/Node2D"]
margin_left = -419.947
margin_top = -428.472
margin_right = 449.053
margin_bottom = -283.472
custom_fonts/font = SubResource( 3 )
text = "СБУ"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="BG/SBU2/SBU/Node2D"]
margin_left = -189.716
margin_top = 380.836
margin_right = 126.284
margin_bottom = 525.836
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harder" type="Button" parent="BG/SBU2/SBU/Node2D"]
margin_left = 51.5306
margin_top = 337.526
margin_right = 223.531
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easier" type="Button" parent="BG/SBU2/SBU/Node2D"]
margin_left = -292.0
margin_top = 337.526
margin_right = -120.0
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Masya2" type="Node2D" parent="BG"]
position = Vector2( 168, 0 )
scale = Vector2( 0.8, 0.8 )

[node name="Masya" type="Sprite" parent="BG/Masya2"]
position = Vector2( 818.412, 241.162 )
scale = Vector2( 0.386097, 0.386097 )
texture = ExtResource( 8 )

[node name="Node2D" type="Node2D" parent="BG/Masya2/Masya"]
position = Vector2( -4.78955, -24.8605 )
scale = Vector2( 0.89556, 0.89556 )

[node name="NameLabel" type="Label" parent="BG/Masya2/Masya/Node2D"]
margin_left = -419.947
margin_top = -428.472
margin_right = 449.053
margin_bottom = -283.472
custom_fonts/font = SubResource( 3 )
text = "Гопарь"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="BG/Masya2/Masya/Node2D"]
margin_left = -189.716
margin_top = 380.836
margin_right = 126.284
margin_bottom = 525.836
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harder" type="Button" parent="BG/Masya2/Masya/Node2D"]
margin_left = 51.5306
margin_top = 337.526
margin_right = 223.531
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easier" type="Button" parent="BG/Masya2/Masya/Node2D"]
margin_left = -292.0
margin_top = 337.526
margin_right = -120.0
margin_bottom = 522.526
custom_fonts/font = SubResource( 4 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BG/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="BG/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="BG/Max2/Max/Harder" to="." method="_on_HarderMax_pressed"]
[connection signal="pressed" from="BG/Max2/Max/Easier" to="." method="_on_EasierMax_pressed"]
[connection signal="pressed" from="BG/Milka2/Milka/Node2D/Harder" to="." method="_on_HarderMil_pressed"]
[connection signal="pressed" from="BG/Milka2/Milka/Node2D/Easier" to="." method="_on_EasierMil_pressed"]
[connection signal="pressed" from="BG/Wannadwatitana2/Wannadwatitana/Node2D/Harder" to="." method="_on_HarderTit_pressed"]
[connection signal="pressed" from="BG/Wannadwatitana2/Wannadwatitana/Node2D/Easier" to="." method="_on_EasierTit_pressed"]
[connection signal="pressed" from="BG/SBU2/SBU/Node2D/Harder" to="." method="_on_HarderSbu_pressed"]
[connection signal="pressed" from="BG/SBU2/SBU/Node2D/Easier" to="." method="_on_EasierSbu_pressed"]
[connection signal="pressed" from="BG/Masya2/Masya/Node2D/Harder" to="." method="_on_HarderMasya_pressed"]
[connection signal="pressed" from="BG/Masya2/Masya/Node2D/Easier" to="." method="_on_EasierMasya_pressed"]
